--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -127,10 +127,10 @@
 <!ENTITY Ctr_options_rem	"Pamatovat poslední zvolenou kategorii">
 <!ENTITY Ctr_svgfilters		"SVG barvy pro defaultní ikony tlačítek lišty">
 <!ENTITY Ctr_wincontrols	"Přesunutelné ovládací prvky okna v režimu celé obrazovky">
-<!ENTITY Ctr_puibuttonsep	"Menu button separator">
-<!ENTITY Ctr_puibut_no_sep	"Hidden">
-<!ENTITY Ctr_puibut_l_sep	"Left">
-<!ENTITY Ctr_puibut_r_sep	"Right">
+<!ENTITY Ctr_puibuttonsep	"Oddělovač tlačítka menu">
+<!ENTITY Ctr_puibut_no_sep	"Skrytý">
+<!ENTITY Ctr_puibut_l_sep	"Vlevo">
+<!ENTITY Ctr_puibut_r_sep	"Vpravo">
 <!ENTITY Ctr_html5warning	"Varování HTML5 při full screenu">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' obrázků: klasický vzhled">
 <!ENTITY Ctr_altalertbox	"'Alert box': alternativní vzhled">
@@ -163,14 +163,14 @@
 <!ENTITY Ctr_hidezoomres	"Přiblížit prvky na liště: skrýt tlačítko pro obnovení lupy">
 <!ENTITY Ctr_alt_newtabp	"Nový panel (about:newtab): alternativní vzhled">
 <!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
-<!ENTITY Ctr_search_ui		"Search">
+<!ENTITY Ctr_search_ui		"Vyhledávání">
 <!ENTITY Ctr_ctroldsearch	"Starý styl vyhledávání">
 <!ENTITY Ctr_ctroldsearchc	"Po vyhledávání vyčistit pole hledání">
-<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
+<!ENTITY Ctr_ctroldsearchr	"Po vyhledávání přejít k prvnímu vyhledávači v seznamu">
 <!ENTITY Ctr_search_oit		"Otevřít vyhledávání v novém panelu">
 <!ENTITY Ctr_osearch_meoit	"Klik kolečkem myši: prohledávat nové panely 'na pozadí'">
-<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
-<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_iwidth	"Automatická šířka popup okna">
+<!ENTITY Ctr_osearch_cwidth	"Nastavitelná šířka pro vyhledávání">
 <!ENTITY Ctr_osearch_dm		"Malá rozevírací šipka">
 <!ENTITY Ctr_addonmanager	"Správce rozšíření">
 <!ENTITY Ctr_alt_addonsp	"Stránka rozšíření lišty 'další info': alternativní vzhled">
@@ -189,7 +189,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Popup: panel menu vzhledu">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'Netříděné záložky' v submenu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu nad záložkami">
-<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: ukázat 'Zobrazit postranní panel'">
 <!ENTITY Ctr_bmbviewbmtb	"Popup: ukázat 'Zobrazit lištu'">
 <!ENTITY Ctr_bmbnounsort	"Popup: skrýt 'Netříděné záložky'">
 <!ENTITY Ctr_bmbutnotext	"Skrýt návěští na liště záložek">
@@ -265,13 +265,13 @@
 <!ENTITY Ctr_icopageinfo	"Favicona/globe-/'i'-icon: 'klik' otevře okno 'Informace o stránce'">
 <!ENTITY Ctr_lbsbsize		"Volitelná šířka pro adresní řádek a vyhledávač">
 <!ENTITY Ctr_searchbar		"Vyhledávač">
-<!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance">
-<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocomplete	"Okno autokompletace">
+<!ENTITY Ctr_altautocompl	"Alternativní vzhled">
+<!ENTITY Ctr_autocompl_it	"Odstranit položky 'Vyhledat pomocí...' a 'Navštívit' (pokud se vyskytují)">
 <!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování">
-<!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results">
-<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
+<!ENTITY Ctr_lbsugresi		"Zrušit limit pro výšku">
+<!ENTITY Ctr_lbsugres		"Počet výsledků">
+<!ENTITY Ctr_lbsbradius		"Volitelné zaoblení pro adresní řádek a vyhledávání">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
 <!ENTITY Ctr_extrabar		"Přídavné lišty">
