--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Odstranit zamlžené pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Odstranit barvu pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Zmenšit prostor nad lištou nástrojů (pokud lze)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Alternativní barva pozadí">
 <!ENTITY Ctr_alttabstb2		"V maximalizovaném okně (tabs on top)">
 
