--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Fjern baggrundståge (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Fjern baggrundsfarve (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducér mellemrum over værktøjslinje (hvis det er muligt)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Alternativ baggrundsfarve">
 <!ENTITY Ctr_alttabstb2		"I maksimeret tilstand (faneblade øverst)">
 
