--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Hintergrundnebel entfernen (Windows Aero Glass / Windows 8)">
 <!ENTITY Ctr_notabbg		"Hintergrundfarbe entfernen (Windows Aero Glass / Windows 8)">
 <!ENTITY Ctr_hightabpos		"Oberen Leistenabstand reduzieren (falls möglich)">
+<!ENTITY Ctr_showalltabsb	"'Alle Tabs auflisten'-Schaltfläche immer anzeigen">
 <!ENTITY Ctr_alttabstb		"Alternative Hintergrundfarbe">
 <!ENTITY Ctr_alttabstb2		"Im maximierten Fenster (Tabs oben)">
 
