--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Eemalda taustaudu (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Eemalda taustavärv (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Vähenda tööriistariba kohal olevat tühja ruumi (kui võimalik)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Alternatiivne taustavärv">
 <!ENTITY Ctr_alttabstb2		"Maksimeeritud režiimis (kaardid peal)">
 
