--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Enlever le brouillard (Aero Glass de Windows/Windows 8)">
 <!ENTITY Ctr_notabbg		"Enlever la couleur d'arrière-plan (Aero Glass de Windows/Windows 8)">
 <!ENTITY Ctr_hightabpos		"Réduire l'espace supérieur (si possible)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Utiliser une couleur d'arrière-plan alternative">
 <!ENTITY Ctr_alttabstb2		"Dans le mode « Agrandi » (onglets au-dessus)">
 
