--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -297,7 +297,8 @@
 <!ENTITY Ctr_hidetbwote2	"Mantieni la barra del titolo (schede in alto)">
 <!ENTITY Ctr_notabfog		"Disattiva l’effetto nebbia (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_notabbg		"Rimuovi colore di sfondo (Windows AeroGlass e Win8)">
-<!ENTITY Ctr_hightabpos		"Quando possibile, riduci lo spazio sopra le barre ">
+<!ENTITY Ctr_hightabpos		"Quando possibile, riduci lo spazio sopra le barre">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Colore di sfondo alternativo">
 <!ENTITY Ctr_alttabstb2		"Finestra ingrandita (schede in alto)">
 
