--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Remover a Névoa do Fundo (Windows AeroGlass/Win8)">
 <!ENTITY Ctr_notabbg		"Remover a Cor do Fundo (Windows AeroGlass/Win8)">
 <!ENTITY Ctr_hightabpos		"Reduzir o Espaço Acima da Barra (Se Possível)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Cor do Fundo Alternativa">
 <!ENTITY Ctr_alttabstb2		"No Modo Maximizado (Abas No Topo)">
 
