--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Arkaplan bulanıklığı kaldır (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Arkaplan rengini kaldır (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Araç çubuğunun üstündeki yer azalt (mümkünse)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Alternatif arkaplan rengi">
 <!ENTITY Ctr_alttabstb2		"Ekranı kaplama modunda (sekmeler üstte)">
 
