--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"移除背景模糊 (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"移除背景颜色 (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"减少工具栏上方空间 (如果可以)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"备选背景颜色">
 <!ENTITY Ctr_alttabstb2		"在最大化模式 (标签在顶部)">
 
