--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows Aeroglass/8)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducir espacio sobre la barra de herramientas (si es posible)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Color de fondo alternativo">
 <!ENTITY Ctr_alttabstb2		"En modo maximizado (pestañas arriba)">
 
