--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -290,7 +290,7 @@
 <!ENTITY Ctr_mbarforceright	"後ろに表示">
 
 <!ENTITY Ctr_toolbars		"ツールバー全般">
-<!ENTITY Ctr_dblclnewtab	"ダブルクリックで新しいタブを開く (browser.newtab.url を使用)">
+<!ENTITY Ctr_dblclnewtab	"ツールバーをダブルクリックで新しいタブを開く">
 <!ENTITY Ctr_hidetbwot		"タブがひとつの時はタブバーを隠す">
 <!ENTITY Ctr_hidetbwote		"起動時に非表示になるまでの遅延を減少させる">
 <!ENTITY Ctr_hidetbwote_i	"タブバーに不具合が発生する可能性があります。">
@@ -298,6 +298,7 @@
 <!ENTITY Ctr_notabfog		"背景のぼかしを取り除く (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"背景色を取り除く (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"ツールバーの上部の間隔を減らす (可能ならば)">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"替わりの背景色にする">
 <!ENTITY Ctr_alttabstb2		"最大化した時 (タブが上部の時)">
 
