--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -368,6 +368,12 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Lydafspilningsikon på faneblade">
 <!ENTITY Ctr_fx42tabsaudico	"Deaktivér denne indstilling for at fjerne 'lydafspilningsikon' fra faneblade.">
+<!ENTITY Ctr_e_containertab	"Container Tabs">
+<!ENTITY Ctr_fx50containert	"Unchecking this preference removes 'container tabs'.">
+<!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
+<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
+<!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_fx50flyweb		"Unchecking this preference disables 'flyweb'.">
 
 
 <!ENTITY Ctr_pw_settings	"Indstillinger">
