--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -368,6 +368,12 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Audio-Abspiel-Symbol auf Tabs">
 <!ENTITY Ctr_fx42tabsaudico	"Das Deaktivieren dieser Option entfernt das 'Audio-Abspiel-Symbol' von den Tabs.">
+<!ENTITY Ctr_e_containertab	"Kontainer Tabs">
+<!ENTITY Ctr_fx50containert	"Das Deaktivieren dieser Option entfernt die 'Kontainer Tabs'.">
+<!ENTITY Ctr_e_findbarhl	"Seitensuchhervorhebung">
+<!ENTITY Ctr_fx50findbarhl	"Das Deaktivieren dieser Optionen entfernt die 'Seitensuchhervorhebung'.">
+<!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_fx50flyweb		"Das Deaktivieren dieser Option entfernt 'Flyweb'.">
 
 
 <!ENTITY Ctr_pw_settings	"Einstellungen">
