--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_autocomplete	"Wuskokujuce wokno awtowudopołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny naglěd">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś">
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
 <!ENTITY Ctr_lbsugres		"Licba wuslědkow">
