--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_autocomplete	"Okno autokompletace">
 <!ENTITY Ctr_altautocompl	"Alternativní vzhled">
 <!ENTITY Ctr_autocompl_it	"Odstranit položky 'Vyhledat pomocí...' a 'Navštívit' (pokud se vyskytují)">
+<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
 <!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování">
 <!ENTITY Ctr_lbsugresi		"Zrušit limit pro výšku">
 <!ENTITY Ctr_lbsugres		"Počet výsledků">
