--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_autocomplete	"Autofuldfør-popup">
 <!ENTITY Ctr_altautocompl	"Alternativt udseende">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
 <!ENTITY Ctr_urlbar_uc		"Deaktivér 'samlede autofuldfør'-funktion">
 <!ENTITY Ctr_lbsugresi		"Deaktivér højdegrænse">
 <!ENTITY Ctr_lbsugres		"Antal resultater">
