--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_autocomplete	"Autovervollständigungs-Pop-up">
 <!ENTITY Ctr_altautocompl	"Alternative Darstellung">
 <!ENTITY Ctr_autocompl_it	"'Mit ... suchen' und 'Aufrufen' Elemente entfernen (falls vorhanden)">
+<!ENTITY Ctr_autocompl_hl	"Trefferhervorhebung: Fett und Unterstrichen">
 <!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren">
 <!ENTITY Ctr_lbsugresi		"Höhenlimit deaktivieren">
 <!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge">
