--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_autocomplete	"Wuskakowace wokno awtowudospołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny napohlad">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
 <!ENTITY Ctr_lbsugres		"Ličba wuslědkow">
