--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_autocomplete	"自動補完リスト">
 <!ENTITY Ctr_altautocompl	"替わりの補完候補機能で置き換える">
 <!ENTITY Ctr_autocompl_it	"「…で検索」と「…を開く」を表示しない (可能ならば)">
+<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
 <!ENTITY Ctr_urlbar_uc		"検索候補機能を統合しない">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
 <!ENTITY Ctr_lbsugres		"候補の表示数">
