--- a/xpi/locale/es/options1.dtd
+++ b/xpi/locale/es/options1.dtd
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"¡Los valores por debajo de 48px causarán problemas en la mayoría de los casos!">
 <!ENTITY Ctr_square_edges	"Esquinas superiores cuadradas">
 <!ENTITY Ctr_tttitlebar		"Título de pestaña en la barra de título de &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras la actual">
+<!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras actual">
 <!ENTITY Ctr_emptytfavico	"Mostrar favicon (si un sitio no ofrece uno)">
 <!ENTITY Ctr_emptytfavico_n	"Ninguno">
 <!ENTITY Ctr_emptytfavico_g	"Genérico">
@@ -74,18 +74,18 @@
 
 <!ENTITY Ctr_hctpinfotab	"Algunas variantes no funcionan con el complemento 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"El botón en la barra de título no funciona con 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_tobainfotab	"El complemento 'Tabs on Bottom' no es compatible con '&Ctr_title;' y se debe deshabilitar. ¡Utilice la configuración disponible de '&Ctr_cuitabsnontop;' en su lugar!">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
-<!ENTITY Ctr_appbutton		"Botón de &brandShortName;">
+<!ENTITY Ctr_appbutton		"Botón de la aplicación">
 <!ENTITY Ctr_appbutton0		"Botón deshabilitado">
 <!ENTITY Ctr_appbutton1		"Botón en la barra de herramientas">
 <!ENTITY Ctr_appbutton1wt	"Botón en la barra de herramientas (sólo texto)">
 <!ENTITY Ctr_appbutton2		"Botón en la barra de título [de &brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Botón en la barra de título [de &brandShortName;] (oculto)">
 <!ENTITY Ctr_appbutton2io	"Botón en la barra de título [de &brandShortName;] (sólo icono)">
-<!ENTITY Ctr_paneluibtweak	"A modo de botón de menú de panel principal...">
-<!ENTITY Ctr_paneluibtweak2	"A modo de botón de menú de panel principal para la barra de pestañas (sólo icono)...">
-<!ENTITY Ctr_paneluibtweak3	"... cuando tal botón esté en la barra de pestañas">
+<!ENTITY Ctr_paneluibtweak	"Botón de menú de panel principal en la barra de pestañas,...">
+<!ENTITY Ctr_paneluibtweak2	"Botón de menú de panel principal en la barra de pestañas (sólo icono),...">
+<!ENTITY Ctr_paneluibtweak3	"...con estilo botón de la aplicación">
 <!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (predeterminado)">
 <!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
@@ -102,10 +102,10 @@
 <!ENTITY Ctr_appbuttonI1e	"¡No es visible en la barra de título de SO de Windows, sólo en la barra de título de &brandShortName;!">
 <!ENTITY Ctr_appbuttonI2	"¡Los colores del botón sólo son visibles en la barra de título y la barra de pestañas!">
 <!ENTITY Ctr_appbutmhi		"Posición más alta (si está en la barra de pestañas)">
-<!ENTITY Ctr_appbautocol	"Establecer automáticamente el color del canal de actualización (predeterminado/Aurora/Nightly)">
+<!ENTITY Ctr_appbautocol	"Establecer automáticamente color del canal de actualización (predeterminado/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ocultar bordes y colores de fondo">
 <!ENTITY Ctr_dblclclosefx	"Hacer doble clic cierra la ventana actual">
-<!ENTITY Ctr_appbclmmenus	"Elementos de submenú con acción propia en el menú del botón (Nueva pestaña, Imprimir...)">
+<!ENTITY Ctr_appbclmmenus	"Elementos de menú pulsables en el menú del botón (Nueva pestaña, Imprimir...)">
 <!ENTITY Ctr_appbutonclab	"Título">
 <!ENTITY Ctr_appbutonclab2	"Añada un título o déjelo vacío">
 
@@ -114,33 +114,33 @@
 <!ENTITY Ctr_smallnavbut	"Botones pequeños en la barra de navegación">
 <!ENTITY Ctr_backforward	"Botones Anterior-Siguiente móviles">
 <!ENTITY Ctr_nbcompact		"Reducir altura de las barras de navegación">
-<!ENTITY Ctr_hide_bf_popup	"Ocultar menú del historial de estos botones al pulsarlos con el ratón">
+<!ENTITY Ctr_hide_bf_popup	"Ocultar menú de historial de estos botones al pulsarlos con el ratón">
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas (Anterior, Siguiente...)">
-<!ENTITY Ctr_prefpage		"Página/Ventana de opciones">
+<!ENTITY Ctr_prefpage		"Página de opciones">
 <!ENTITY Ctr_altoptionsd	"Apariencia predeterminada">
 <!ENTITY Ctr_altoptionsp	"Apariencia alternativa">
 <!ENTITY Ctr_altoptionsw	"Abrir página de opciones en una ventana">
 <!ENTITY Ctr_altoptionsww	"Ancho">
 <!ENTITY Ctr_altoptionswh	"Alto">
-<!ENTITY Ctr_altoptionsi	"La ventana simulada de opciones ya no es un cuadro de diálogo sino una 'ventana de navegador' con todas las barras de herramientas ocultas. La característica 'Usar página actual' como página de inicio sólo añade URLs de páginas abiertas en la ventana actual, que en este caso sólo es 'about:preferences'. El botón de barra de herramientas 'Opciones' se sustituye por uno nuevo para poder abrir las opciones en una ventana.">
-<!ENTITY Ctr_options_rem	"Recordar la última categoría seleccionada">
+<!ENTITY Ctr_altoptionsi	"La ventana simulada de opciones ya no es un cuadro de diálogo sino una 'ventana de navegador' con todas las barras de herramientas ocultas. La característica 'Usar página actual' sólo añade URLs de páginas abiertas en la ventana actual, que en este caso sólo es 'about:preferences'. El botón de barra de herramientas 'Opciones' se sustituye por uno nuevo para poder abrir las opciones en una ventana.">
+<!ENTITY Ctr_options_rem	"Recordar última categoría seleccionada">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
-<!ENTITY Ctr_puibuttonsep	"Separador del botón de menú">
-<!ENTITY Ctr_puibut_no_sep	"Oculto">
-<!ENTITY Ctr_puibut_l_sep	"Izquierda">
-<!ENTITY Ctr_puibut_r_sep	"Derecha">
-<!ENTITY Ctr_html5warning	"Advertencia de pantalla completa de contenidos HTML5">
-<!ENTITY Ctr_oldtoplevimg	"Apariencia clásica de imagen sobre fondo blanco">
+<!ENTITY Ctr_puibuttonsep	"Menu button separator">
+<!ENTITY Ctr_puibut_no_sep	"Hidden">
+<!ENTITY Ctr_puibut_l_sep	"Left">
+<!ENTITY Ctr_puibut_r_sep	"Right">
+<!ENTITY Ctr_html5warning	"Advertencia de pantalla completa de HTML5">
+<!ENTITY Ctr_oldtoplevimg	"Imágenes del 'dominio de primer nivel': Apariencia clásica">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
 <!ENTITY Ctr_emptygfavico	"Reemplazar favicon genérico">
-<!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de contenedor de la antigua barra de estado">
+<!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de la antigua barra de estado">
 <!ENTITY Ctr_mstatusbars4e	"El panel de barra de estado está controlado por 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"El panel de barra de estado está controlado por 'ThePuzzlePiece'">
 <!ENTITY Ctr_mstatusbarpzt	"El panel de barra de estado está controlado por 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"El panel de barra de estado está controlado por 'The Addon Bar (Restored)'">
-<!ENTITY Ctr_combrelstop	"Combinar botones Parar-Recargar en la barra de herramientas">
+<!ENTITY Ctr_combrelstop	"Combinar botones Parar-Recargar">
 <!ENTITY Ctr_stoprel1		"Importante: ¡Sitúe el botón Recargar después del botón Parar!">
 <!ENTITY Ctr_panelmenucol	"Menús emergentes de panel: Color de fondo alternativo">
 <!ENTITY Ctr_hideprivmask	"Navegación privada: Ocultar indicador de máscara">
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_navlargeicons	"Iconos grandes">
 <!ENTITY Ctr_nbisizedelay0	"Retardo de la activación al inicio">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 seg)">
-<!ENTITY Ctr_findbar		"Posición de la barra de herramientas de búsqueda (Ctrl+F, F3) en la ventana">
+<!ENTITY Ctr_findbar		"Posición de la barra de búsqueda en la ventana">
 <!ENTITY Ctr_findbar_def	"Abajo (predeterminada)">
 <!ENTITY Ctr_findbar_top	"Arriba">
 <!ENTITY Ctr_findbar_topa	"Arriba (alternativa)">
@@ -166,23 +166,23 @@
 <!ENTITY Ctr_search_ui		"Buscar">
 <!ENTITY Ctr_ctroldsearch	"Menú antiguo de la barra de búsqueda">
 <!ENTITY Ctr_ctroldsearchc	"Limpiar barra de búsqueda después de buscar">
-<!ENTITY Ctr_ctroldsearchr	"Volver al primer motor de búsqueda de la lista después de buscar">
+<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
 <!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña">
-<!ENTITY Ctr_osearch_meoit	"Clic central: Realizar la búsqueda en una nueva 'pestaña en primer plano'">
+<!ENTITY Ctr_osearch_meoit	"Clic central: Busqueda en una nueva 'pestaña en primer plano'">
 <!ENTITY Ctr_osearch_iwidth	"Ajustar automáticamente anchura del menú emergente">
-<!ENTITY Ctr_osearch_cwidth	"Anchura personalizada para menús emergentes de búsqueda">
-<!ENTITY Ctr_osearch_dm		"Flecha de despliegue pequeña">
+<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_dm		"Flecha pequeña de despliegue">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información': Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
 <!ENTITY Ctr_am_nowarning	"Ocultar advertencias en las listas de complementos">
 <!ENTITY Ctr_am_compact		"Vista compacta de las listas">
 <!ENTITY Ctr_am_compact2	"Vista compacta +">
-<!ENTITY Ctr_am_highlight	"Resaltar entradas de las listas al señalarlas con el ratón">
+<!ENTITY Ctr_am_highlight	"Resaltar entradas de las listas al señalarlas">
 <!ENTITY Ctr_am_buticons	"Reemplazar etiquetas de los botones de los complementos con iconos">
-<!ENTITY Ctr_am_hovshowb	"Sólo mostrar botones de los complementos al señalarlos con el ratón">
+<!ENTITY Ctr_am_hovshowb	"Sólo mostrar botones de los complementos al señalar su entrada con el ratón (hover)">
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
-<!ENTITY Ctr_xpinstallui	"Antiguo cuadro de diálogo de instalación">
+<!ENTITY Ctr_xpinstallui	"Antiguo diálogo de instalación">
 <!ENTITY Ctr_bmbutton		"Botón de menú emergente de Marcadores">
 <!ENTITY Ctr_hiderecentbm	"Menú emergente de Marcadores: Ocultar marcadores añadidos recientemente">
 <!ENTITY Ctr_hideeditbm		"Estrella de marcadores: Ocultar panel emergente (si la página no está en marcadores)">
@@ -247,16 +247,16 @@
 <!ENTITY Ctr_urlbardropm2	"Hacer siempre visible la flecha de despliegue">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
-<!ENTITY Ctr_locsearchbw10	"Reducir altura de barras de direcciones y de búsqueda (experimental)">
+<!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y la barra de búsqueda (experimental)">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (recuadro de identidad)">
 <!ENTITY Ctr_ib_nohovcolor	"No mostrar color gris al señalarlo">
-<!ENTITY Ctr_ib_graycolor	"Color gris para identidades desconocidas y páginas 'about:'">
+<!ENTITY Ctr_ib_graycolor	"Color gris para identidades desconocidas y páginas chrome://">
 <!ENTITY Ctr_verifiedcolors	"Botón coloreado para sitios web verificados, y conexiones seguras y no seguras">
 <!ENTITY Ctr_ibinfoico		"Reemplazar icono-'i' con un icono de globo terráqueo">
 <!ENTITY Ctr_ibinfoico2		"Ocultar icono-'i' (si es posible)">
 <!ENTITY Ctr_iblabels		"Ocultar etiquetas">
 <!ENTITY Ctr_faviconurl		"Mostrar favicon del sitio web">
-<!ENTITY Ctr_padlock		"Icono de candado para conexiones seguras">
+<!ENTITY Ctr_padlock		"Candado para conexiones seguras">
 <!ENTITY Ctr_padlock_hid	"oculto">
 <!ENTITY Ctr_padlock_def	"predeterminado">
 <!ENTITY Ctr_padlock_cla	"clásico">
@@ -268,8 +268,8 @@
 <!ENTITY Ctr_autocomplete	"Ménu emergente de autocompletado">
 <!ENTITY Ctr_urlbar_uc		"Deshabilitar 'Autocompletado unificado'">
 <!ENTITY Ctr_altautocompl	"Apariencia alternativa">
-<!ENTITY Ctr_autocompl_it	"Eliminar los elementos 'Buscar con...' y 'Visitar' (si están presentes)">
-<!ENTITY Ctr_autocompl_hl	"Marcado de coincidencias: En negrita y subrayadas">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
 <!ENTITY Ctr_lbsbradius		"Borde de radio personalizado para barra de direcciones y barra de búsqueda">
@@ -299,19 +299,19 @@
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows Aeroglass/8)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducir espacio sobre la barra de herramientas (si es posible)">
-<!ENTITY Ctr_showalltabsb	"Mostrar siempre el botón 'Mostrar todas las pestañas'">
+<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
 <!ENTITY Ctr_alttabstb		"Color de fondo alternativo">
 <!ENTITY Ctr_alttabstb2		"En modo maximizado (pestañas arriba)">
 
-<!ENTITY Ctr_altmenubar		"Añadir color de fondo (de la barra de título del SO)">
+<!ENTITY Ctr_altmenubar		"Añadir color de fondo (barra de título del SO)">
 <!ENTITY Ctr_altmenubarpos	"Posición alternativa">
 <!ENTITY Ctr_altmenubarpos2	"Bajo la barra de título de &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Eliminar color/niebla de fondo (Windows Aeroglass/8)">
 
-<!ENTITY Ctr_aerocolors		"Colores Aero azul (celeste) para las barras principales y pestañas">
-<!ENTITY Ctr_aerocolorsg	"Colores Aero gris-azul">
+<!ENTITY Ctr_aerocolors		"Colores azul Aero (celeste) para las barras principales y pestañas">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Barra de título/menú/pestañas: Eliminar color de fondo">
-<!ENTITY Ctr_transpttbew10	"Ajustes adicionales para algunos temas decorativos del SO">
+<!ENTITY Ctr_transpttbew10	"Ajustes adicionales para algunos temas decorativos de SO">
 <!ENTITY Ctr_transptcw10	"Ocultar botones Min/Max/Cerrar predeterminados del SO">
 <!ENTITY Ctr_hidenavbar		"Ocultar barra">
 <!ENTITY Ctr_navbarpad		"Ahuecado adicional a izquierda y derecha">
@@ -337,11 +337,11 @@
 <!ENTITY Ctr_animation		"Animación">
 <!ENTITY Ctr_tabthrobber	"Imagen predeterminada durante la carga">
 <!ENTITY Ctr_bmanimation	"Al añadir nuevos marcadores">
-<!ENTITY Ctr_pananimation	"De la apertura de menús de panel">
+<!ENTITY Ctr_pananimation	"De la apertura de paneles">
 <!ENTITY Ctr_tabanimation	"De la apertura/cierre de pestañas">
 <!ENTITY Ctr_dlanimation	"De las notificaciones de descarga">
-<!ENTITY Ctr_fsanimation	"Del cambio a pantalla completa">
-<!ENTITY Ctr_fsaduration	"Del cambio a pantalla completa para contenidos HTML5">
+<!ENTITY Ctr_fsanimation	"De pantalla completa">
+<!ENTITY Ctr_fsaduration	"De pantalla completa del contenido HTML5">
 
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
@@ -354,7 +354,7 @@
 
 <!ENTITY Ctr_experttweaks	"Avanzadas">
 <!ENTITY Ctr_fx34search		"Desmarcar esto retira la 'nueva apariencia de búsqueda' y recupera la antigua.">
-<!ENTITY Ctr_fx34loop		"Desmarcar esto retira las características de 'llamada y conversación'.">
+<!ENTITY Ctr_fx34loop		"Desmarcar esto retira las características de 'llamada y conversación' (Hello).">
 <!ENTITY Ctr_fx35devtheme	"Desmarcar esto deshabilita el tema decorativo 'Developer Edition'.">
 <!ENTITY Ctr_fx36prefs		"Desmarcar esto restaura la antigua ventana de Opciones en lugar de la actual pestaña.">
 <!ENTITY Ctr_fx36prefs2		"¡La ventana antigua no contiene todas las preferencias del navegador añadidas recientemente!">
@@ -362,19 +362,19 @@
 <!ENTITY Ctr_fx38pocket		"Desmarcar esto deshabilita el servicio de guardado 'Pocket' y elimina su botón.">
 <!ENTITY Ctr_fx38pocket2	"Hacerlo con el botón 'Pocket' en 'Personalizar' elimina sus menús en marcadores y vista de lectura.">
 <!ENTITY Ctr_e_searchui		"Aspecto de la barra de búsqueda">
-<!ENTITY Ctr_e_loop			"Hello / Llamada y conversación / Loop">
+<!ENTITY Ctr_e_loop			"Llamada y conversación / Loop">
 <!ENTITY Ctr_e_deved		"Tema decorativo 'Developer Edition'">
 <!ENTITY Ctr_e_prefsui		"Preferencias en pestaña">
 <!ENTITY Ctr_e_readermode	"Modo de vista de lectura">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icono de reproducción de audio en las pestañas">
 <!ENTITY Ctr_fx42tabsaudico	"Desmarcar esto retira el 'icono de reproducción de audio' de las pestañas.">
-<!ENTITY Ctr_e_containertab	"Pestañas contenedor">
-<!ENTITY Ctr_fx50containert	"Desmarcar esto suprime las 'pestañas contenedor'.">
-<!ENTITY Ctr_e_findbarhl	"Resaltado de la barra de herramientas de búsqueda.">
-<!ENTITY Ctr_fx50findbarhl	"Desmarcar estos ajustes suprime las funciones de 'resaltado' de las barras de herramientas de búsqueda.">
+<!ENTITY Ctr_e_containertab	"Container Tabs">
+<!ENTITY Ctr_fx50containert	"Unchecking this preference removes 'container tabs'.">
+<!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
+<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Desmarcar esta preferencia deshabilita 'flyweb'.">
+<!ENTITY Ctr_fx50flyweb		"Unchecking this preference disables 'flyweb'.">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
@@ -388,7 +388,7 @@
 
 <!ENTITY Ctr_special_font	"¡Las configuraciones de color de fondo son sólo para el tema decorativo predeterminado!">
 <!ENTITY Ctr_special_info	"¡Algunas opciones podrían no ofrecer cambios visuales en todos los casos!">
-<!ENTITY Ctr_special_info2	"¡Detectado tema decorativo de terceros! ¡Algunas opciones no funcionarán con ellos!">
+<!ENTITY Ctr_special_info2	"¡Las configuraciones se realizan para el tema decorativo predeterminado de &brandShortName;, y puede que no funcionen con todos los temas de terceros!">
 <!ENTITY Ctr_support		"Foro de soporte">
 <!ENTITY Ctr_newversion		"¿Nueva versión?">
 
