--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -268,7 +268,7 @@
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
 <!ENTITY Ctr_autocompl_it	"Eemalda kirjed 'Otsi otsingumootoriga...' ja 'Külasta' (kui on)">
-<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_hl	"Tabamuste märgistamine: paks ja allajoonitud tekst">
 <!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete'">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv">
@@ -291,7 +291,7 @@
 <!ENTITY Ctr_mbarforceright	"Viimane element">
 
 <!ENTITY Ctr_toolbars		"Tööriistaribad">
-<!ENTITY Ctr_dblclnewtab	"Topeltklõpsamine avab kaardi 'uus'">
+<!ENTITY Ctr_dblclnewtab	"Kaartide ribal topeltklõpsamine avab uue kaardi">
 <!ENTITY Ctr_hidetbwot		"Ainult ühe nähtava kaardi korral peida kaartide riba">
 <!ENTITY Ctr_hidetbwote		"Vähenda peitmise viivitust käivitumisel">
 <!ENTITY Ctr_hidetbwote_i	"Võib põhjustada kaartide riba tõrkeid">
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_notabfog		"Eemalda taustaudu (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Eemalda taustavärv (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Vähenda tööriistariba kohal olevat tühja ruumi (kui võimalik)">
-<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
+<!ENTITY Ctr_showalltabsb	"Alati näita kõigi kaartide nimekirja nuppu">
 <!ENTITY Ctr_alttabstb		"Alternatiivne taustavärv">
 <!ENTITY Ctr_alttabstb2		"Maksimeeritud režiimis (kaardid peal)">
 
@@ -369,12 +369,12 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Heli esitamise ikoon kaartidel">
 <!ENTITY Ctr_fx42tabsaudico	"Sellelt eelistuselt märke eemaldamine eemaldab kaartidelt 'heli esitamise ikooni'.">
-<!ENTITY Ctr_e_containertab	"Container Tabs">
-<!ENTITY Ctr_fx50containert	"Unchecking this preference removes 'container tabs'.">
-<!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
-<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
+<!ENTITY Ctr_e_containertab	"Ümbriskaardid">
+<!ENTITY Ctr_fx50containert	"Sellelt eelistuselt märke eemaldamine keelab ümbriskaartide funktsiooni 'container tabs'.">
+<!ENTITY Ctr_e_findbarhl	"Otsinguribal esiletõstmine">
+<!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab otsinguriba esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Unchecking this preference disables 'flyweb'.">
+<!ENTITY Ctr_fx50flyweb		"Sellelt eelistuselt märke eemaldamine keelab funktsiooni 'Flyweb'.">
 
 
 <!ENTITY Ctr_pw_settings	"Sätted">
