--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_altautocompl	"Alternative Darstellung">
 <!ENTITY Ctr_autocompl_it	"'Mit ... suchen' und 'Aufrufen' Elemente entfernen (falls vorhanden)">
 <!ENTITY Ctr_autocompl_hl	"Trefferhervorhebung: Fett und Unterstrichen">
+<!ENTITY Ctr_autocompl_sep	"Trennlinie zwischen den Ergebnissen anzeigen">
 <!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren">
 <!ENTITY Ctr_lbsugresi		"Höhenlimit deaktivieren">
 <!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge">
