--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_altautocompl	"Alternativní vzhled">
 <!ENTITY Ctr_autocompl_it	"Odstranit položky 'Vyhledat pomocí...' a 'Navštívit' (pokud se vyskytují)">
 <!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování">
 <!ENTITY Ctr_lbsugresi		"Zrušit limit pro výšku">
 <!ENTITY Ctr_lbsugres		"Počet výsledků">
