--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_altautocompl	"Alternativt udseende">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Deaktivér 'samlede autofuldfør'-funktion">
 <!ENTITY Ctr_lbsugresi		"Deaktivér højdegrænse">
 <!ENTITY Ctr_lbsugres		"Antal resultater">
