--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_altautocompl	"Alternatiwny naglěd">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś">
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
 <!ENTITY Ctr_lbsugres		"Licba wuslědkow">
