--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_altautocompl	"Εναλλακτική εμφάνιση">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Απενεργοποίηση χαρακτηριστικού ενιαίας αυτόματης συμπλήρωσης">
 <!ENTITY Ctr_lbsugresi		"Απενεργοποίηση ορίου ύψους">
 <!ENTITY Ctr_lbsugres		"Αριθμός αποτελεσμάτων">
