--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -270,6 +270,7 @@
 <!ENTITY Ctr_altautocompl	"Apariencia alternativa">
 <!ENTITY Ctr_autocompl_it	"Eliminar los elementos 'Buscar con...' y 'Visitar' (si están presentes)">
 <!ENTITY Ctr_autocompl_hl	"Marcado de coincidencias: En negrita y subrayadas">
+<!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
 <!ENTITY Ctr_lbsbradius		"Borde de radio personalizado para barra de direcciones y barra de búsqueda">
