--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
 <!ENTITY Ctr_autocompl_it	"Eemalda kirjed 'Otsi otsingumootoriga...' ja 'Külasta' (kui on)">
 <!ENTITY Ctr_autocompl_hl	"Tabamuste märgistamine: paks ja allajoonitud tekst">
+<!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete'">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv">
