--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_altautocompl	"Альтернативний вигляд">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Вимкнути функцію «автозаповнення»">
 <!ENTITY Ctr_lbsugresi		"Вимкнути обмеження висоти">
 <!ENTITY Ctr_lbsugres		"Кількість результатів">
