--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -268,12 +268,8 @@
 <!ENTITY Ctr_autocomplete	"Pojavno okno samodokončevanja">
 <!ENTITY Ctr_altautocompl	"Nadomestni videz">
 <!ENTITY Ctr_autocompl_it	"Odstrani predmeta 'Išči s/z …' in 'Obišči' (če sta prisotna)">
-<<<<<<< HEAD
 <!ENTITY Ctr_autocompl_hl	"Označevanje zadetkov: krepko in podčrtano">
-=======
-<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
-<!ENTITY Ctr_autocompl_sep	"Show separator between results">
->>>>>>> refs/remotes/Aris-t2/master
+<!ENTITY Ctr_autocompl_sep	"Prikaži ločilo med rezultati">
 <!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja'">
 <!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
 <!ENTITY Ctr_lbsugres		"Število rezultatov">
