--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Nový panel (najetí myši)">
 <!ENTITY Ctr_bold			"Tučný">
 <!ENTITY Ctr_italic			"Kurzíva">
+<!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"Zvoleným nastavením přepsat 'najetí myši'">
 <!ENTITY Ctr_tabc_act_tb	"Barva pozadí lišt">
 
@@ -268,7 +269,7 @@
 <!ENTITY Ctr_autocomplete	"Okno autokompletace">
 <!ENTITY Ctr_altautocompl	"Alternativní vzhled">
 <!ENTITY Ctr_autocompl_it	"Odstranit položky 'Vyhledat pomocí...' a 'Navštívit' (pokud se vyskytují)">
-<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
 <!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování">
 <!ENTITY Ctr_lbsugresi		"Zrušit limit pro výšku">
