--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Neuer Tab (hover)">
 <!ENTITY Ctr_bold			"Fett">
 <!ENTITY Ctr_italic			"Kursiv">
+<!ENTITY Ctr_underlined		"Unterstrichen">
 <!ENTITY Ctr_notabhov		"Aktivierte Einstellungen ersetzen 'Hover-Einstellungen'">
 <!ENTITY Ctr_tabc_act_tb	"Tab-Hintergrundfarbe auf Leisten">
 
@@ -268,7 +269,7 @@
 <!ENTITY Ctr_autocomplete	"Autovervollständigungs-Pop-up">
 <!ENTITY Ctr_altautocompl	"Alternative Darstellung">
 <!ENTITY Ctr_autocompl_it	"'Mit ... suchen' und 'Aufrufen' Elemente entfernen (falls vorhanden)">
-<!ENTITY Ctr_autocompl_hl	"Trefferhervorhebung: Fett und Unterstrichen">
+<!ENTITY Ctr_autocompl_hl	"Hervorhebung von Texttreffern">
 <!ENTITY Ctr_autocompl_sep	"Trennlinie zwischen den Ergebnissen anzeigen">
 <!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren">
 <!ENTITY Ctr_lbsugresi		"Höhenlimit deaktivieren">
