--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Nowy rajtark (hover)">
 <!ENTITY Ctr_bold			"Tučny">
 <!ENTITY Ctr_italic			"Kursiwny">
+<!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"Zmóžnjene nastajenja přepisuja 'hover-nastajenja'">
 <!ENTITY Ctr_tabc_act_tb	"Pozadkowa barba na symbolowych lajstach">
 
@@ -268,7 +269,7 @@
 <!ENTITY Ctr_autocomplete	"Wuskakowace wokno awtowudospołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny napohlad">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
-<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
 <!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
