--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"新しいタブ (hover)">
 <!ENTITY Ctr_bold			"太字">
 <!ENTITY Ctr_italic			"斜体">
+<!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"hover の設定を上書きする">
 <!ENTITY Ctr_tabc_act_tb	"ツールバーに背景色をつける">
 
@@ -268,8 +269,8 @@
 <!ENTITY Ctr_autocomplete	"自動補完リスト">
 <!ENTITY Ctr_altautocompl	"替わりの補完候補機能で置き換える">
 <!ENTITY Ctr_autocompl_it	"「…で検索」と「…を開く」を表示しない (可能ならば)">
-<!ENTITY Ctr_autocompl_hl	"一致部分を太字と下線で表示する">
-<!ENTITY Ctr_autocompl_sep	"Show separator between results">
+<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
+<!ENTITY Ctr_autocompl_sep	"結果を境界線で区切る">
 <!ENTITY Ctr_urlbar_uc		"検索候補機能を統合しない">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
 <!ENTITY Ctr_lbsugres		"候補の表示数">
