--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"新分頁 (懸停)">
 <!ENTITY Ctr_bold			"粗體">
 <!ENTITY Ctr_italic			"斜體">
+<!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"優先權高於「分頁(懸停)」的設定">
 <!ENTITY Ctr_tabc_act_tb	"將目前分頁的背景顏色套用到工具列上">
 
@@ -268,7 +269,7 @@
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
 <!ENTITY Ctr_altautocompl	"Alternative appearance">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
-<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
 <!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
