--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Nyt faneblad der peges på">
 <!ENTITY Ctr_bold			"Fed">
 <!ENTITY Ctr_italic			"Kursiv">
+<!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"Aktiveret indstillinger overstyrer 'Der peges på'-indstillinger">
 <!ENTITY Ctr_tabc_act_tb	"Baggrundsfarve på værktøjslinjer">
 
@@ -268,7 +269,7 @@
 <!ENTITY Ctr_autocomplete	"Autofuldfør-popup">
 <!ENTITY Ctr_altautocompl	"Alternativt udseende">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
-<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
 <!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Deaktivér 'samlede autofuldfør'-funktion">
 <!ENTITY Ctr_lbsugresi		"Deaktivér højdegrænse">
