--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -132,7 +132,7 @@
 <!ENTITY Ctr_puibut_l_sep	"Izquierda">
 <!ENTITY Ctr_puibut_r_sep	"Derecha">
 <!ENTITY Ctr_html5warning	"Advertencia de pantalla completa de contenidos HTML5">
-<!ENTITY Ctr_oldtoplevimg	"Apariencia clásica de imagen sobre fondo blanco">
+<!ENTITY Ctr_oldtoplevimg	"Vista de imagen: Apariencia clásica sobre fondo blanco">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
 <!ENTITY Ctr_emptygfavico	"Reemplazar favicon genérico">
 <!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de contenedor de la antigua barra de estado">
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Nueva pestaña señalada">
 <!ENTITY Ctr_bold			"Negrita">
 <!ENTITY Ctr_italic			"Cursiva">
+<!ENTITY Ctr_underlined		"Subrayadas">
 <!ENTITY Ctr_notabhov		"Las configuraciones habilitadas se imponen a las de pestaña 'señalada'">
 <!ENTITY Ctr_tabc_act_tb	"Color de fondo en barras de herramientas">
 
@@ -269,8 +270,8 @@
 <!ENTITY Ctr_urlbar_uc		"Deshabilitar 'Autocompletado unificado'">
 <!ENTITY Ctr_altautocompl	"Apariencia alternativa">
 <!ENTITY Ctr_autocompl_it	"Eliminar los elementos 'Buscar con...' y 'Visitar' (si están presentes)">
-<!ENTITY Ctr_autocompl_hl	"Marcado de coincidencias: En negrita y subrayadas">
-<!ENTITY Ctr_autocompl_sep	"Show separator between results">
+<!ENTITY Ctr_autocompl_hl	"Marcado de coincidencias">
+<!ENTITY Ctr_autocompl_sep	"Mostrar separador entre resultados">
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
 <!ENTITY Ctr_lbsbradius		"Borde de radio personalizado para barra de direcciones y barra de búsqueda">
