--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -232,6 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Yeni sekme (duraksamış)">
 <!ENTITY Ctr_bold			"Kalın">
 <!ENTITY Ctr_italic			"İtalik">
+<!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 <!ENTITY Ctr_tabc_act_tb	"Araç çubukları üzerinde arka plan rengi">
 
@@ -268,7 +269,7 @@
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
 <!ENTITY Ctr_altautocompl	"Alternative appearance">
 <!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
-<!ENTITY Ctr_autocompl_hl	"Marking of hits: Bold and Underlined">
+<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
 <!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
