--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -74,7 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Деякі різновиди вкладок не сумісні з додатком Hide Caption Titlebar Plus.">
 <!ENTITY Ctr_hctpinfoab		"Кнопка на панелі заголовку не сумісна з додатком Hide Caption Titlebar Plus.">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"Додаток «Tabs on Bottom» не сумісний з «&Ctr_title;» і повинен бути вимкнений. Використовуйте доступні «&Ctr_cuitabsnontop;» налаштування натомість!">
 
 <!ENTITY Ctr_appbutton		"Кнопка програми">
 <!ENTITY Ctr_appbutton0		"Кнопка вимкнена">
@@ -232,7 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Нова вкладка (в очікуванні)">
 <!ENTITY Ctr_bold			"Жирний">
 <!ENTITY Ctr_italic			"Курсив">
-<!ENTITY Ctr_underlined		"Underlined">
+<!ENTITY Ctr_underlined		"Підкреслений">
 <!ENTITY Ctr_notabhov		"Увімкнені налаштування скасовують налаштування «в очікуванні»">
 <!ENTITY Ctr_tabc_act_tb	"Колір тла на панелях">
 
@@ -268,9 +268,9 @@
 <!ENTITY Ctr_searchbar		"Панель пошуку">
 <!ENTITY Ctr_autocomplete	"Спливаюче вікно автозаповнення">
 <!ENTITY Ctr_altautocompl	"Альтернативний вигляд">
-<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
-<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
-<!ENTITY Ctr_autocompl_sep	"Show separator between results">
+<!ENTITY Ctr_autocompl_it	"Усунути пункти «Шукати з...» та «Відвідати» (якщо присутні)">
+<!ENTITY Ctr_autocompl_hl	"Виділення текстових результатів">
+<!ENTITY Ctr_autocompl_sep	"Показати розділювач між результатами">
 <!ENTITY Ctr_urlbar_uc		"Вимкнути функцію «автозаповнення»">
 <!ENTITY Ctr_lbsugresi		"Вимкнути обмеження висоти">
 <!ENTITY Ctr_lbsugres		"Кількість результатів">
@@ -301,7 +301,7 @@
 <!ENTITY Ctr_notabfog		"Прибрати затуманення тла (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Прибрати колір тла (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Зменшити простір над панеллю інструментів (якщо можливо)">
-<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
+<!ENTITY Ctr_showalltabsb	"Завжди показувати кнопку «усі вкладки»">
 <!ENTITY Ctr_alttabstb		"Альтернативний колір тла">
 <!ENTITY Ctr_alttabstb2		"У розширеному режимі (вкладки нагорі)">
 
@@ -357,11 +357,11 @@
 <!ENTITY Ctr_experttweaks	"Розширені опції">
 <!ENTITY Ctr_fx34search		"В &brandShortName; 34+ введено «новий пошуковий інтерфейс». Вимкнення цього параметра поверне  «старий пошуковий інтерфейс».">
 <!ENTITY Ctr_fx34loop		"В &brandShortName; 34+ введені особливості «виклику та сеансу зв’язку». Вимкнення цього параметру видалить їх.">
-<!ENTITY Ctr_fx35devtheme	"В &brandShortName; 35+ введено нову «тему» від розробника. Вимкнення цих налаштувань вимикає цю «тему» і її кнопку в ручному режимі налаштувань.">
-<!ENTITY Ctr_fx36prefs		"В &brandShortName; 36+ введено нове налаштування у вкладці. Вимкнення цього пункту відновлює вікно зі старими налаштуванням.">
+<!ENTITY Ctr_fx35devtheme	"В &brandShortName; 35+ введено нову «тему» від розробника. цього параметру вимикає цю «тему» і її кнопку в ручному режимі налаштувань.">
+<!ENTITY Ctr_fx36prefs		"В &brandShortName; 36+ введено нове налаштування у вкладці. Вимкнення цього параметру відновлює вікно зі старими налаштуванням.">
 <!ENTITY Ctr_fx36prefs2		"Примітка: Старе вікно налаштувань не містить усі нещодавно додані настройки браузера!">
-<!ENTITY Ctr_fx38reader		"В &brandShortName; 38+ введено новий «режим читання». Вимкнення цього пункту вимикає цей режим та прибирає його іконку з панелі навігації.">
-<!ENTITY Ctr_fx38pocket		"В &brandShortName; 38.0.5+ введено режим «Кишеня». Вимкнення цього пункту вимикає цей режим та усуває його кнопку з панелей.">
+<!ENTITY Ctr_fx38reader		"В &brandShortName; 38+ введено новий «режим читання». Вимкнення цього параметру вимикає цей режим та прибирає його іконку з панелі навігації.">
+<!ENTITY Ctr_fx38pocket		"В &brandShortName; 38.0.5+ введено режим «Кишеня». Вимкнення цього параметру вимикає цей режим та усуває його кнопку з панелей.">
 <!ENTITY Ctr_fx38pocket2	"Примітка: Переміщення кнопки «Кишеня» на сторінку «Пристосувати &brandShortName;» перед вимкненням цього налаштування також усуває написи «Кишеня» в закладках і меню читання.">
 <!ENTITY Ctr_e_searchui		"Вигляд панелі Пошук">
 <!ENTITY Ctr_e_loop			"Виклик та сеанс зв’язку">
@@ -370,13 +370,13 @@
 <!ENTITY Ctr_e_readermode	"Режим читання">
 <!ENTITY Ctr_e_pocket		"Кишеня">
 <!ENTITY Ctr_e_tabsaudioico	"Іконка аудіовідтворення на вкладках">
-<!ENTITY Ctr_fx42tabsaudico	"Вимкнення цього налаштування усуває «іконку аудіовідтворення» з вкладок.">
-<!ENTITY Ctr_e_containertab	"Container Tabs">
-<!ENTITY Ctr_fx50containert	"Unchecking this preference removes 'container tabs'.">
-<!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
-<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
+<!ENTITY Ctr_fx42tabsaudico	"Вимкнення цього параметру усуває «іконку аудіовідтворення» з вкладок.">
+<!ENTITY Ctr_e_containertab	"Контейнерні вкладки">
+<!ENTITY Ctr_fx50containert	"Вимкнення цього параметру усуває «Контейнерні вкладки».">
+<!ENTITY Ctr_e_findbarhl	"Підсвічування в пошуковій панелі">
+<!ENTITY Ctr_fx50findbarhl	"Вимкнення цього параметру усуває «підсвічувальні» особливості пошукової панелі.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Unchecking this preference disables 'flyweb'.">
+<!ENTITY Ctr_fx50flyweb		"Вимкнення цього налаштування вимикає «Flyweb».">
 
 
 <!ENTITY Ctr_pw_settings	"Налаштування">
