--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -230,9 +230,9 @@
 <!ENTITY Ctr_tabunr			"Karta nieprzeczytana">
 <!ENTITY Ctr_ntabnor		"Nowa karta domyślna">
 <!ENTITY Ctr_ntabhov		"Nowa karta najechana">
-<!ENTITY Ctr_bold			"Pogrubiona">
+<!ENTITY Ctr_bold			"Pogrubienie">
 <!ENTITY Ctr_italic			"Kursywa">
-<!ENTITY Ctr_underlined		"Podkreślone">
+<!ENTITY Ctr_underlined		"Podkreślenie">
 <!ENTITY Ctr_notabhov		"Włączone ustawienia nie uwzględniają ustawień 'najechania'">
 <!ENTITY Ctr_tabc_act_tb	"Kolor tła na paskach narzędzi">
 
@@ -269,7 +269,7 @@
 <!ENTITY Ctr_autocomplete	"Menu podręczne autouzupełniania">
 <!ENTITY Ctr_altautocompl	"Alternatywny wygląd">
 <!ENTITY Ctr_autocompl_it	"Usuń elementy 'szukaj w...' oraz 'otwórz stronę' (jeżeli obecne)">
-<!ENTITY Ctr_autocompl_hl	"Znakowanie wystąpień">
+<!ENTITY Ctr_autocompl_hl	"Znakowanie wystąpień tekstu">
 <!ENTITY Ctr_autocompl_sep	"Pokaż separator pomiędzy wynikami">
 <!ENTITY Ctr_urlbar_uc		"Wyłącz funkcję 'ujednolicone autouzupełnianie'">
 <!ENTITY Ctr_lbsugresi		"Wyłącz ograniczenie wysokości">
