--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -270,7 +270,7 @@
 <!ENTITY Ctr_altautocompl	"替わりの補完候補機能で置き換える">
 <!ENTITY Ctr_autocompl_it	"「…で検索」と「…を開く」を表示しない (可能ならば)">
 <!ENTITY Ctr_autocompl_hl	"一致部分を強調表示する">
-<!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
+<!ENTITY Ctr_autocompl_rhl	"検索結果のハイライト色を Areo カラーにする">
 <!ENTITY Ctr_autocompl_sep	"結果を境界線で区切る">
 <!ENTITY Ctr_urlbar_uc		"検索候補機能を統合しない">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
