--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -271,7 +271,7 @@
 <!ENTITY Ctr_altautocompl	"Apariencia alternativa">
 <!ENTITY Ctr_autocompl_it	"Eliminar los elementos 'Buscar con...' y 'Visitar' (si están presentes)">
 <!ENTITY Ctr_autocompl_hl	"Marcado de coincidencias">
-<!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
+<!ENTITY Ctr_autocompl_rhl	"Colores Aero para resultados destacados">
 <!ENTITY Ctr_autocompl_sep	"Mostrar separador entre resultados">
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
